closes #1737: update Quarkus to 2.10.1.Final, finalize int tests (#1957)